[package]
name = "openmls-lmdb-storage"
authors = ["White Noise Authors <dev@whitenoise.chat>"]
version = "0.1.0"
edition = "2021"
description = "An LMDB storage backend for OpenMLS implementing openmls_traits."
license = "MIT"
documentation = "https://docs.rs/openmls-lmdb-storage"
repository = "https://github.com/erskingardner/openmls-lmdb-storage"
homepage = "https://github.com/erskingardner/openmls-lmdb-storage"
readme = "README.md"
keywords = ["openmls", "lmdb", "storage"]
exclude = [".github/", "tests/", "Cargo.lock", ".gitignore"]

[dependencies]
openmls_traits = { version = "0.3", git = "https://github.com/openmls/openmls", rev = "e2fc5e1" }
heed = "0.21"
thiserror = "1.0"
serde_json = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
hex = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
